@@ -1,4 +1,6 @@
 v1.5.1 - TBD
+FIXED:
+  Minecraft 1.18 version only: Fix Titanium worldgen using platinum configuration settings.
 
 
 
